@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-04T08:13:54Z",
+  "timestamp" : "2023-08-06T08:12:29Z",
   "count_outdated" : 154,
   "uniques_outdated" : 129,
-  "count" : 166,
-  "uniques" : 140,
+  "count" : 167,
+  "uniques" : 141,
   "clones" : [
     {
       "timestamp": "2023-07-25T00:00:00Z",
@@ -79,6 +79,15 @@
     },
     {
       "timestamp": "2023-08-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
